--- a/blog_article.html
+++ b/blog_article.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/lightslider.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,30 +22,39 @@
                     <div class="wm-top__block">
                         <div class="wm-block__logo">
                             <div class="wm-logo">
-                                <a href="#"><img class="wm-logo__img" src="images/logo.png" alt="logo" width="194" height="49"></a>
+                                <a href="http://test.pengstud.com/woodman/index.html"><img class="wm-logo__img" src="images/logo.png" alt="logo" width="194" height="49"></a>
                             </div>
                         </div>
                         <div class="wm-block__buttons">
                             <div class="wm-buttons">
-                                <a class="wm-buttons__link" href="#">Расчет своего проекта</a><button class="wm-buttons__callback">заказать звонок</button>
+                                <div class="wm-buttons__link">
+                                    <a class="wm-buttons-link" href="#">Расчет своего проекта</a>
+                                </div>
+                                <div class="wm-buttons__callback">
+                                    <button class="wm-buttons-callback under-btn">заказать звонок</button>
+                                </div>
                             </div>
                         </div>
                         <div class="wm-block__contact">
                             <div class="wm-contact">
-                                <div class="wm-contact__phone">8&nbsp;(495)&nbsp;991&ndash;37&ndash;41</div>
-                                <div class="wm-contact__email">zakaz@woodmen.ru</div>
+                                <div class="wm-contact__phone">
+                                    <span class="wm-contact-phone">8&nbsp;(495)&nbsp;991&ndash;37&ndash;41</span>
+                                </div>
+                                <div class="wm-contact__email">
+                                    <span class="wm-contact-email">zakaz@woodmen.ru</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="wm-top__navigation">
                         <nav class="wm-navigation">
                             <ul>
-                                <li><a href="#">О компании</a></li>
-                                <li><a href="#">Проекты</a></li>
-                                <li><a href="#">Цены</a></li>
-                                <li><a href="#">Наши работы</a></li>
-                                <li><a href="#">Отзывы</a></li>
-                                <li><a href="#">Контакты</a></li>
+                                <li><a href="#" class="wm-navigation__link">О компании</a></li>
+                                <li><a href="http://test.pengstud.com/woodman/category.html" class="wm-navigation__link">Проекты</a></li>
+                                <li><a href="#" class="wm-navigation__link">Цены</a></li>
+                                <li><a href="#" class="wm-navigation__link">Наши работы</a></li>
+                                <li><a href="#" class="wm-navigation__link">Отзывы</a></li>
+                                <li><a href="#" class="wm-navigation__link">Контакты</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -55,32 +65,32 @@
             <div class="main">
                 <div class="wm-bot">
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/doma_iz_brusa.png" alt="doma_iz_brusa" width="184" height="129"/></div>
                             <div class="wm-block-category__title">Дома из бруса</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/karkasnie_doma.png" alt="doma_iz_brusa" width="163" height="129"/></div>
                             <div class="wm-block-category__title">Каркасные дома</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/doma_pod_usadku.png" alt="doma_iz_brusa" width="177" height="129"/></div>
                             <div class="wm-block-category__title">Дома под усадку</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/bani_iz_brusa.png" alt="doma_iz_brusa" width="171" height="129"/></div>
                             <div class="wm-block-category__title">Бани из бруса</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -109,6 +119,10 @@
                     В народе эти вредители получили название – «белые муравьи». Это название связано с окраской рабочих термитов, которая часто светлая или даже белесая. От настоящих муравьев все термиты внешне отличаются отсутствием узкой перетяжки, отделяющей грудь от брюшка.
                     <br><br>
                     Самые большие колонии термитов проживают в тропических и субтропических регионах, меньшее количество – в теплых областях умеренного климата. Также их можно встретить на Юге Канады, центральной части Франции, в Корее и Японии, странах СНД
+                    <br><br>
+                    Основная пища термитов – целлюлоза, содержащаяся в древесине, траве и листьях деревьев, поэтому они могут наносить значительный хозяйственный ущерб (по различным исследованиям несколько миллиардов долларов в год), повреждая деревянные сооружения и деревянистые виды. Их скрытность и тактика поедания древесины, при которой её поверхность выглядит абсолютно неповрежденной, являются причиной их позднего обнаружения.
+                    <br><br>
+                    Опасение вызывают также случайные попадания термитов в квартиры, благодаря чему их ареал продвигается и в те регионы, где они не могут жить открыто из-за климата. Попав в дом, термиты не ограничиваются древесиной: все, в чём высока доля целлюлозы, служит потенциальной пищей. Последствия этого порой катастрофические (например, в Южной Америке из-за постоянного присутствия термитов в городах редко можно найти книгу старше 50 лет).
                 </p>
             </div>
             <div class="wm-article__pager">
@@ -122,24 +136,6 @@
     </section>
     <!-- End section article -->
 
-    <!-- Section seo -->
-    <section class="content-block content-block-3 wm-seo">
-        <div class="main">
-            <div class="wm-seo-wrap">
-                <div class="wm-seo-wrap__info">
-                    <div class="wm-seo-info">
-                        <h2 class="wm-seo-info__title">Деревянные дома: от проекта до реализации</h2>
-                        <p class="wm-seo-info__text">Среди суматохи современного города иногда так хочется несколько минут тишины и покоя. Чтобы над головой смыкались кроны деревьев, вдалеке тихо журчала речка, а воздух был свеж и прозрачен. Именно за подобной романтикой бывалые туристы с огромными рюкзаками отправляются в многодневные походы. Однако, не всем по плечу такие приключения. Для предпочитающих отдых в собственной удобной кровати под надежной крышей в деревянном доме, цена которого в разы возрастает, когда на улице непогода, приобретение загородного жилья может стать отдушиной в жестком ритме города.
-                        <br><br>
-                            Многие не решаются построить дом из-за связанных с этим финансовых расходов и проблем со строительством. При сотрудничестве с нашей компанией можно минимизировать негативное влияние этих факторов.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End section seo -->
-
     <!-- Section question -->
     <section class="content-block content-block-4 wm-question">
         <div class="main">
@@ -152,16 +148,15 @@
                 </div>
                 <div class="wm-question-block__info">
                     <div class="wm-question-info">
-                        <h2 class="wm-question-info__title">У Вас остались к нам вопросы?</h2>
+                        <h2 class="wm-question-info__title sub-title">У Вас остались к нам вопросы?</h2>
                         <div class="wm-question-info__sub-title">Закажите бесплатную консультацию!</div>
                         <div class="wm-question-info__form">
                             <form action="" class="wm-question-info-form">
                                 <div class="wm-question-info-form__inputs">
-                                    <input type="text"/>
-                                    <input type="tel"/>
-                                    <input type="submit" value="Отправить заявку"/>
+                                    <input class="wm-question-info-form-input main-input" type="text" name="Name" placeholder="Имя"/>
+                                    <input class="wm-question-info-form-input main-input" type="tel" name="Phone" placeholder="Телефон"/>
+                                    <input class="wm-question-info-form-btn sub-main" type="submit" value="Отправить заявку"/>
                                 </div>
-                                <div class="wm-question-info-form__dispatch">Заявка еще не отправлена</div>
                             </form>
                         </div>
                     </div>
@@ -183,27 +178,27 @@
                                 <div class="wm-footer-agreement__link">Смотреть договор</div>
                             </a>
                         </div>
-                        <div class="wm-footer-right__column">
-                            <nav class="wm-footer-navigation">
+                        <div class="wm-footer-right__column wm-footer-right__navigation">
+                            <nav class="wm-footer-navigation wm-footer-navigation wm-footer-navigation--left">
                                 <ul>
-                                    <li><a href="#">О компании</a></li>
-                                    <li><a href="#">Наши работы</a></li>
-                                    <li><a href="#">Отзывы</a></li>
-                                    <li><a href="#">Цены</a></li>
-                                    <li><a href="#">Статьи</a></li>
-                                    <li><a href="#">Контакты</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">О компании</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Наши работы</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Отзывы</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Цены</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Статьи</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Контакты</a></li>
                                 </ul>
                             </nav>
-                        </div>
-                        <div class="wm-footer-right__column">
-                            <nav class="wm-footer-navigation">
+                            <!--</div>-->
+                            <!--<div class="wm-footer-right__column">-->
+                            <nav class="wm-footer-navigation wm-footer-navigation--right">
                                 <ul>
-                                    <li><a href="#">Дома из бруса</a></li>
-                                    <li><a href="#">Каркасные дома</a></li>
-                                    <li><a href="#">Дома под усадку</a></li>
-                                    <li><a href="#">Бани из бруса</a></li>
-                                    <li><a href="#">В кредит</a></li>
-                                    <li><a href="#">Материнский капитал</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Дома из бруса</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Каркасные дома</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Дома под усадку</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Бани из бруса</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">В кредит</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link"s>Материнский капитал</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -230,6 +225,7 @@
 
 <!--js -->
 <script src="js/lib/jquery.min.js"></script>
+<script src="js/lightslider.min.js"></script>
 <script src="js/common.min.js"></script>
 <!-- end js -->
 
