--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/lightslider.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -398,6 +399,7 @@
 
 <!--js -->
 <script src="js/lib/jquery.min.js"></script>
+<script src="js/lightslider.min.js"></script>
 <script src="js/common.min.js"></script>
 <!-- end js -->
 
