--- a/price.html
+++ b/price.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/lightslider.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,30 +22,39 @@
                     <div class="wm-top__block">
                         <div class="wm-block__logo">
                             <div class="wm-logo">
-                                <a href="#"><img class="wm-logo__img" src="images/logo.png" alt="logo" width="194" height="49"></a>
+                                <a href="http://test.pengstud.com/woodman/index.html"><img class="wm-logo__img" src="images/logo.png" alt="logo" width="194" height="49"></a>
                             </div>
                         </div>
                         <div class="wm-block__buttons">
                             <div class="wm-buttons">
-                                <a class="wm-buttons__link" href="#">Расчет своего проекта</a><button class="wm-buttons__callback">заказать звонок</button>
+                                <div class="wm-buttons__link">
+                                    <a class="wm-buttons-link" href="#">Расчет своего проекта</a>
+                                </div>
+                                <div class="wm-buttons__callback">
+                                    <button class="wm-buttons-callback under-btn">заказать звонок</button>
+                                </div>
                             </div>
                         </div>
                         <div class="wm-block__contact">
                             <div class="wm-contact">
-                                <div class="wm-contact__phone">8&nbsp;(495)&nbsp;991&ndash;37&ndash;41</div>
-                                <div class="wm-contact__email">zakaz@woodmen.ru</div>
+                                <div class="wm-contact__phone">
+                                    <span class="wm-contact-phone">8&nbsp;(495)&nbsp;991&ndash;37&ndash;41</span>
+                                </div>
+                                <div class="wm-contact__email">
+                                    <span class="wm-contact-email">zakaz@woodmen.ru</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="wm-top__navigation">
                         <nav class="wm-navigation">
                             <ul>
-                                <li><a href="#">О компании</a></li>
-                                <li><a href="#">Проекты</a></li>
-                                <li><a href="#">Цены</a></li>
-                                <li><a href="#">Наши работы</a></li>
-                                <li><a href="#">Отзывы</a></li>
-                                <li><a href="#">Контакты</a></li>
+                                <li><a href="#" class="wm-navigation__link">О компании</a></li>
+                                <li><a href="http://test.pengstud.com/woodman/category.html" class="wm-navigation__link">Проекты</a></li>
+                                <li><a href="#" class="wm-navigation__link">Цены</a></li>
+                                <li><a href="#" class="wm-navigation__link">Наши работы</a></li>
+                                <li><a href="#" class="wm-navigation__link">Отзывы</a></li>
+                                <li><a href="#" class="wm-navigation__link">Контакты</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -55,32 +65,32 @@
             <div class="main">
                 <div class="wm-bot">
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/doma_iz_brusa.png" alt="doma_iz_brusa" width="184" height="129"/></div>
                             <div class="wm-block-category__title">Дома из бруса</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/karkasnie_doma.png" alt="doma_iz_brusa" width="163" height="129"/></div>
                             <div class="wm-block-category__title">Каркасные дома</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/doma_pod_usadku.png" alt="doma_iz_brusa" width="177" height="129"/></div>
                             <div class="wm-block-category__title">Дома под усадку</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                     <div class="wm-bot__block-category">
-                        <div class="wm-block-category">
+                        <a href="#" class="wm-block-category">
                             <div class="wm-block-category__image"><img src="images/bani_iz_brusa.png" alt="doma_iz_brusa" width="171" height="129"/></div>
                             <div class="wm-block-category__title">Бани из бруса</div>
                             <div class="wm-block-category__text">Более 50 проектов от 220 000 руб</div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -123,7 +133,7 @@
                                     <div class="wm-price-name">Количество этажей</div>
                                 </div>
                                 <div class="wm-price-row__select-wrap">
-                                    <select name="Floor" class="wm-price-input">
+                                    <select name="Floor" class="wm-price-input wm-price-input--width">
                                         <option value="">1</option>
                                         <option value="">2</option>
                                     </select>
@@ -133,7 +143,7 @@
                                 <div class="wm-price-row__name">
                                     <div class="wm-price-name">Площадь (м<sup>2</sup>)</div>
                                 </div>
-                                <div class="wm-price-row__select-wrap"><input type="text" name="Square" class="wm-price-input"></div>
+                                <div class="wm-price-row__select-wrap"><input type="text" name="Square" class="wm-price-input wm-price-input--width"></div>
                             </div>
                             <div class="wm-price-calculator__row wm-price-row">
                                 <div class="wm-price-row__name">
@@ -190,9 +200,9 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="wm-price-calculator__btn-wrap">
-                                <input type="submit" value="Отправить на просчет" class="wm-price-btn"/>
-                            </div>
+                        </div>
+                        <div class="wm-price-btn-wrap">
+                            <input type="submit" value="Отправить на просчет" class="wm-price-btn main-btn"/>
                         </div>
                     </form>
                 </div>
@@ -220,7 +230,7 @@
     <!-- End section seo -->
 
     <!-- Section question -->
-    <section class="content-block content-block-6 wm-question">
+    <section class="content-block content-block-4 wm-question">
         <div class="main">
             <div class="wm-question-block">
                 <div class="wm-question-block__photo">
@@ -231,16 +241,15 @@
                 </div>
                 <div class="wm-question-block__info">
                     <div class="wm-question-info">
-                        <h2 class="wm-question-info__title">У Вас остались к нам вопросы?</h2>
+                        <h2 class="wm-question-info__title sub-title">У Вас остались к нам вопросы?</h2>
                         <div class="wm-question-info__sub-title">Закажите бесплатную консультацию!</div>
                         <div class="wm-question-info__form">
                             <form action="" class="wm-question-info-form">
                                 <div class="wm-question-info-form__inputs">
-                                    <input type="text"/>
-                                    <input type="tel"/>
-                                    <input type="submit" value="Отправить заявку"/>
+                                    <input class="wm-question-info-form-input main-input" type="text" name="Name" placeholder="Имя"/>
+                                    <input class="wm-question-info-form-input main-input" type="tel" name="Phone" placeholder="Телефон"/>
+                                    <input class="wm-question-info-form-btn sub-main" type="submit" value="Отправить заявку"/>
                                 </div>
-                                <div class="wm-question-info-form__dispatch">Заявка еще не отправлена</div>
                             </form>
                         </div>
                     </div>
@@ -262,27 +271,27 @@
                                 <div class="wm-footer-agreement__link">Смотреть договор</div>
                             </a>
                         </div>
-                        <div class="wm-footer-right__column">
-                            <nav class="wm-footer-navigation">
+                        <div class="wm-footer-right__column wm-footer-right__navigation">
+                            <nav class="wm-footer-navigation wm-footer-navigation wm-footer-navigation--left">
                                 <ul>
-                                    <li><a href="#">О компании</a></li>
-                                    <li><a href="#">Наши работы</a></li>
-                                    <li><a href="#">Отзывы</a></li>
-                                    <li><a href="#">Цены</a></li>
-                                    <li><a href="#">Статьи</a></li>
-                                    <li><a href="#">Контакты</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">О компании</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Наши работы</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Отзывы</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Цены</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Статьи</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Контакты</a></li>
                                 </ul>
                             </nav>
-                        </div>
-                        <div class="wm-footer-right__column">
-                            <nav class="wm-footer-navigation">
+                            <!--</div>-->
+                            <!--<div class="wm-footer-right__column">-->
+                            <nav class="wm-footer-navigation wm-footer-navigation--right">
                                 <ul>
-                                    <li><a href="#">Дома из бруса</a></li>
-                                    <li><a href="#">Каркасные дома</a></li>
-                                    <li><a href="#">Дома под усадку</a></li>
-                                    <li><a href="#">Бани из бруса</a></li>
-                                    <li><a href="#">В кредит</a></li>
-                                    <li><a href="#">Материнский капитал</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Дома из бруса</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Каркасные дома</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Дома под усадку</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">Бани из бруса</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link">В кредит</a></li>
+                                    <li><a href="#" class="wm-footer-navigation__link"s>Материнский капитал</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -309,6 +318,7 @@
 
 <!--js -->
 <script src="js/lib/jquery.min.js"></script>
+<script src="js/lightslider.min.js"></script>
 <script src="js/common.min.js"></script>
 <!-- end js -->
 
